--- a/conpose.yaml
+++ b/conpose.yaml
@@ -1,6 +1,6 @@
 services:
   discord-image:
-    build: .
+    images: ghcr.io/missuo/discord-image
     ports:
       - "8080:8080"
     environment:
